--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,12 +7,16 @@ Please define what each HTTP verb does. Then, provide an example of when you wou
 - DELETE
 
 # Answer
-1. GET -
+1. GET - Reads data sent over from a server. 
+ex) I want to see the Google homepage.
 
-2. POST -
+2. POST - Creates new data on the server.
+ex) I want to post a picture of my cat, so I make a new blog post.
 
-3. PUT/PATCH -
+3. PUT/PATCH - Updates the data on the server.
+ex) I want to change my username.
 
-4. DELETE -
+4. DELETE - Deletes the data from the server.
+ex) I want to delete the picture of my cat.
 
 # Teacher Feedback
