--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,6 +3,6 @@
 What is the "Request/Response Cycle?"
 
 # Answer
-
+The client sends a request to the server; the server then processes the request and sends back a response. The format of a request is "url + verb" while the format of the response is "status code + message body."
 
 # Teacher Feedback
