--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -3,6 +3,6 @@
 Who sends the HTTP status code: the client or the server? What is the point of the status code?
 
 # Answer
-
+The server sends the HTTP status code. The status code tells us the results of the request; for example, a 404 code indicates that the clients request could not be completed because the information they are looking for cannot be found. A code in the 200s indicates that the request was successful.
 
 # Teacher Feedback
