--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -3,14 +3,14 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 
 # Answer
 
-1. 200 -
+1. 200 - The client's request was successful.
 
-2. 201 -
+2. 201 - The client's request was successful and a new resource was created as a result.
 
-3. 204 -
+3. 204 - The client's request was successful, but there is nothing to send to the result body.
 
-4. 404 -
+4. 404 - The client's request was unsuccessful because the server cannot find the requested source. This often occurs because of an issue on the client's end (for example, writing a typo when fetching something.)
 
-5. 500 -
+5. 500 - The client's request could not be fulfilled due to an error on the server side.
 
 # Teacher Feedback
