--- a/short-answers/q5.md
+++ b/short-answers/q5.md
@@ -2,6 +2,6 @@
 What are the two arguments that we pass into `fetch` and what do they do? What does `fetch` return?
 
 # Answer
-
+We pass a url and an options into fetch. The url indicates where we're fetching from, while the options object indicates the type of HTTP method we're sending the server, headers, the body, and other parameters. `fetch` returns a promise that resolves to a response object.
 
 # Teacher Feedback
