--- a/short-answers/q6.md
+++ b/short-answers/q6.md
@@ -8,13 +8,13 @@
 
 # Answer
 
-1. `Response.ok` -
+1. `Response.ok` - will be eitehr true or false depending on the status of the response; if the response was successful, it will be true. If the response was unsuccessful, it will be false.
 
-2. `Response.status` -
+2. `Response.status` - Indicates whether or not the response was successful through status codes (200, 404, 301, etc.)
 
-3. `Response.url` -
+3. `Response.url` - Indicates the url of the response. This can help us ensure we're getting out response from the right place.
 
-4. `Response.headers` -
+4. `Response.headers` - This provides access to the headers of the response. The headers provide metadata such as content length, type, etc.
 
 
 # Teacher Feedback
