--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -14,3 +14,7 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 5. 500 - The client's request could not be fulfilled due to an error on the server side.
 
 # Teacher Feedback
+
+Perfect!
+
+Score: 3/3
